@@ -97,7 +97,7 @@ AS_IF([test "x${ac_scorep_compiler_suite_called}" != "x"],
     [ac_scorep_compiler_suite_called="yes"])
 
 AC_ARG_WITH([nocross-compiler-suite],
-            [AS_HELP_STRING([--with-nocross-compiler-suite=(gcc|ibm|intel|nvhpc|pgi|clang|aocc)],
+            [AS_HELP_STRING([--with-nocross-compiler-suite=(gcc|ibm|intel|oneapi|nvhpc|pgi|clang|aocc)],
                             [The compiler suite used to build this package in non cross-compiling environments. Needs to be in $PATH [gcc].])],
             [AS_IF([test "x${ac_scorep_cross_compiling}" = "xno"],
                    [ac_scorep_compilers_backend="compiler-nocross-gcc" # default
@@ -105,6 +105,7 @@ AC_ARG_WITH([nocross-compiler-suite],
                             ["gcc"],       [ac_scorep_compilers_backend="compiler-nocross-gcc"],
                             ["ibm"],       [ac_scorep_compilers_backend="compiler-nocross-ibm"],
                             ["intel"],     [ac_scorep_compilers_backend="compiler-nocross-intel"],
+                            ["oneapi"],    [ac_scorep_compilers_backend="compiler-nocross-oneapi"],
                             ["nvhpc"],     [ac_scorep_compilers_backend="compiler-nocross-nvhpc"],
                             ["pgi"],       [ac_scorep_compilers_backend="compiler-nocross-pgi"],
                             ["clang"],     [ac_scorep_compilers_backend="compiler-nocross-clang"],
@@ -118,7 +119,7 @@ AS_IF([test -f "AFS_COMPILER_FILES_PACKAGE/${ac_scorep_compilers_backend}"],
 
 
 AC_ARG_WITH([frontend-compiler-suite],
-            [AS_HELP_STRING([--with-frontend-compiler-suite=(gcc|ibm|intel|nvhpc|pgi|clang|aocc)],
+            [AS_HELP_STRING([--with-frontend-compiler-suite=(gcc|ibm|intel|oneapi|nvhpc|pgi|clang|aocc)],
                             [The compiler suite used to build the frontend parts of this package in cross-compiling environments. Needs to be in $PATH [gcc].])],
             [AS_IF([test "x${ac_scorep_cross_compiling}" = "xyes"],
                    [ac_scorep_compilers_frontend="compiler-frontend-gcc"
@@ -126,6 +127,7 @@ AC_ARG_WITH([frontend-compiler-suite],
                             ["gcc"],       [ac_scorep_compilers_frontend="compiler-frontend-gcc"],
                             ["ibm"],       [ac_scorep_compilers_frontend="compiler-frontend-ibm"],
                             ["intel"],     [ac_scorep_compilers_frontend="compiler-frontend-intel"],
+                            ["oneapi"],    [ac_scorep_compilers_frontend="compiler-frontend-oneapi"],
                             ["nvhpc"],     [ac_scorep_compilers_frontend="compiler-frontend-nvhpc"],
                             ["pgi"],       [ac_scorep_compilers_frontend="compiler-frontend-pgi"],
                             ["clang"],     [ac_scorep_compilers_frontend="compiler-frontend-clang"],
