@@ -42,15 +42,29 @@
 # for intel
 AC_DEFUN([_AX_COMPILER_VERSION_INTEL],
   [ dnl
-  AC_COMPUTE_INT(_ax_[]_AC_LANG_ABBREV[]_compiler_version_major,
-    [__INTEL_COMPILER/100],,
-    AC_MSG_FAILURE([[[$0]] unknown intel compiler version]))
-  AC_COMPUTE_INT(_ax_[]_AC_LANG_ABBREV[]_compiler_version_minor,
-    [(__INTEL_COMPILER%100)/10],,
-    AC_MSG_FAILURE([[[$0]] unknown intel compiler version]))
-  AC_COMPUTE_INT(_ax_[]_AC_LANG_ABBREV[]_compiler_version_patch,
-    [(__INTEL_COMPILER%10)],,
-    AC_MSG_FAILURE([[[$0]] unknown intel compiler version]))
+  AS_CASE([${ax_cv_[]_AC_LANG_ABBREV[]_compiler_vendor}],
+    [intel],
+    [ dnl
+    AC_COMPUTE_INT(_ax_[]_AC_LANG_ABBREV[]_compiler_version_major,
+      [__INTEL_COMPILER/100],,
+      AC_MSG_FAILURE([[[$0]] unknown intel compiler version]))
+    AC_COMPUTE_INT(_ax_[]_AC_LANG_ABBREV[]_compiler_version_minor,
+      [(__INTEL_COMPILER%100)/10],,
+      AC_MSG_FAILURE([[[$0]] unknown intel compiler version]))
+    AC_COMPUTE_INT(_ax_[]_AC_LANG_ABBREV[]_compiler_version_patch,
+      [(__INTEL_COMPILER%10)],,
+      AC_MSG_FAILURE([[[$0]] unknown intel compiler version]))],
+    [intel/oneapi],
+    [ dnl
+    AC_COMPUTE_INT(_ax_[]_AC_LANG_ABBREV[]_compiler_version_major,
+      [__INTEL_LLVM_COMPILER/10000],,
+      AC_MSG_FAILURE([[[$0]] unknown intel oneAPI compiler version]))
+    AC_COMPUTE_INT(_ax_[]_AC_LANG_ABBREV[]_compiler_version_minor,
+      [(__INTEL_LLVM_COMPILER/100)%100],,
+      AC_MSG_FAILURE([[[$0]] unknown intel oneAPI compiler version]))
+    AC_COMPUTE_INT(_ax_[]_AC_LANG_ABBREV[]_compiler_version_patch,
+      [(__INTEL_LLVM_COMPILER%100)],,
+      AC_MSG_FAILURE([[[$0]] unknown intel oneAPI compiler version]))])
   ax_cv_[]_AC_LANG_ABBREV[]_compiler_version="$_ax_[]_AC_LANG_ABBREV[]_compiler_version_major.$_ax_[]_AC_LANG_ABBREV[]_compiler_version_minor.$_ax_[]_AC_LANG_ABBREV[]_compiler_version_patch"
   ])
 
