@@ -1,0 +1,12 @@
+CC=icx
+CXX=icpx
+F77=ifx
+FC=ifx
+
+#CPPFLAGS=
+CFLAGS=-g -O2
+CXXFLAGS=-g -O2
+FFLAGS=-g -O2
+FCFLAGS=-g -O2
+#LDFLAGS=
+#LIBS=
