@@ -53,31 +53,34 @@
 
 #define SCOREP_BACKEND_COMPILER_MIC @SCOREP_COMPILER_MIC@
 
-#define SCOREP_BACKEND_COMPILER_CC_CRAY    @SCOREP_COMPILER_CC_CRAY@
-#define SCOREP_BACKEND_COMPILER_CC_GNU     @SCOREP_COMPILER_CC_GNU@
-#define SCOREP_BACKEND_COMPILER_CC_IBM     @SCOREP_COMPILER_CC_IBM@
-#define SCOREP_BACKEND_COMPILER_CC_INTEL   @SCOREP_COMPILER_CC_INTEL@
-#define SCOREP_BACKEND_COMPILER_CC_PGI     @SCOREP_COMPILER_CC_PGI@
-#define SCOREP_BACKEND_COMPILER_CC_FUJITSU @SCOREP_COMPILER_CC_FUJITSU@
-#define SCOREP_BACKEND_COMPILER_CC_CLANG   @SCOREP_COMPILER_CC_CLANG@
+#define SCOREP_BACKEND_COMPILER_CC_CRAY         @SCOREP_COMPILER_CC_CRAY@
+#define SCOREP_BACKEND_COMPILER_CC_GNU          @SCOREP_COMPILER_CC_GNU@
+#define SCOREP_BACKEND_COMPILER_CC_IBM          @SCOREP_COMPILER_CC_IBM@
+#define SCOREP_BACKEND_COMPILER_CC_INTEL        @SCOREP_COMPILER_CC_INTEL@
+#define SCOREP_BACKEND_COMPILER_CC_INTEL_ONEAPI @SCOREP_COMPILER_CC_INTEL_ONEAPI@
+#define SCOREP_BACKEND_COMPILER_CC_PGI          @SCOREP_COMPILER_CC_PGI@
+#define SCOREP_BACKEND_COMPILER_CC_FUJITSU      @SCOREP_COMPILER_CC_FUJITSU@
+#define SCOREP_BACKEND_COMPILER_CC_CLANG        @SCOREP_COMPILER_CC_CLANG@
 
-#define SCOREP_BACKEND_COMPILER_CXX_CRAY    @SCOREP_COMPILER_CXX_CRAY@
-#define SCOREP_BACKEND_COMPILER_CXX_GNU     @SCOREP_COMPILER_CXX_GNU@
-#define SCOREP_BACKEND_COMPILER_CXX_IBM     @SCOREP_COMPILER_CXX_IBM@
-#define SCOREP_BACKEND_COMPILER_CXX_INTEL   @SCOREP_COMPILER_CXX_INTEL@
-#define SCOREP_BACKEND_COMPILER_CXX_PGI     @SCOREP_COMPILER_CXX_PGI@
-#define SCOREP_BACKEND_COMPILER_CXX_FUJITSU @SCOREP_COMPILER_CXX_FUJITSU@
-#define SCOREP_BACKEND_COMPILER_CXX_CLANG   @SCOREP_COMPILER_CXX_CLANG@
+#define SCOREP_BACKEND_COMPILER_CXX_CRAY         @SCOREP_COMPILER_CXX_CRAY@
+#define SCOREP_BACKEND_COMPILER_CXX_GNU          @SCOREP_COMPILER_CXX_GNU@
+#define SCOREP_BACKEND_COMPILER_CXX_IBM          @SCOREP_COMPILER_CXX_IBM@
+#define SCOREP_BACKEND_COMPILER_CXX_INTEL        @SCOREP_COMPILER_CXX_INTEL@
+#define SCOREP_BACKEND_COMPILER_CXX_INTEL_ONEAPI @SCOREP_COMPILER_CXX_INTEL_ONEAPI@
+#define SCOREP_BACKEND_COMPILER_CXX_PGI          @SCOREP_COMPILER_CXX_PGI@
+#define SCOREP_BACKEND_COMPILER_CXX_FUJITSU      @SCOREP_COMPILER_CXX_FUJITSU@
+#define SCOREP_BACKEND_COMPILER_CXX_CLANG        @SCOREP_COMPILER_CXX_CLANG@
 
 #define SCOREP_BACKEND_HAVE_FC_COMPILER    @SCOREP_HAVE_FC@
 
-#define SCOREP_BACKEND_COMPILER_FC_CRAY    @SCOREP_COMPILER_FC_CRAY@
-#define SCOREP_BACKEND_COMPILER_FC_GNU     @SCOREP_COMPILER_FC_GNU@
-#define SCOREP_BACKEND_COMPILER_FC_IBM     @SCOREP_COMPILER_FC_IBM@
-#define SCOREP_BACKEND_COMPILER_FC_INTEL   @SCOREP_COMPILER_FC_INTEL@
-#define SCOREP_BACKEND_COMPILER_FC_PGI     @SCOREP_COMPILER_FC_PGI@
-#define SCOREP_BACKEND_COMPILER_FC_FUJITSU @SCOREP_COMPILER_FC_FUJITSU@
-#define SCOREP_BACKEND_COMPILER_FC_CLANG   @SCOREP_COMPILER_FC_CLANG@
+#define SCOREP_BACKEND_COMPILER_FC_CRAY         @SCOREP_COMPILER_FC_CRAY@
+#define SCOREP_BACKEND_COMPILER_FC_GNU          @SCOREP_COMPILER_FC_GNU@
+#define SCOREP_BACKEND_COMPILER_FC_IBM          @SCOREP_COMPILER_FC_IBM@
+#define SCOREP_BACKEND_COMPILER_FC_INTEL        @SCOREP_COMPILER_FC_INTEL@
+#define SCOREP_BACKEND_COMPILER_FC_INTEL_ONEAPI @SCOREP_COMPILER_FC_INTEL_ONEAPI@
+#define SCOREP_BACKEND_COMPILER_FC_PGI          @SCOREP_COMPILER_FC_PGI@
+#define SCOREP_BACKEND_COMPILER_FC_FUJITSU      @SCOREP_COMPILER_FC_FUJITSU@
+#define SCOREP_BACKEND_COMPILER_FC_CLANG        @SCOREP_COMPILER_FC_CLANG@
 
 #define SCOREP_BACKEND_HAVE_OMP_ANCESTRY @SCOREP_OMP_ANCESTRY@
 #define SCOREP_BACKEND_HAVE_OMP_TPD      @SCOREP_OMP_TPD@
